<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".other">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/ford_button"
                android:layout_width="268dp"
                android:layout_height="217dp"
                android:layout_marginStart="68dp"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/ford"
                android:onClick="handleMatch"
                android:text="@string/Text_ford"
                android:textColor="#FFFFFF"
                android:textSize="40sp" />


            <Button
                android:id="@+id/cc_button"
                android:layout_width="268dp"
                android:layout_height="217dp"
                android:layout_marginStart="68dp"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/cc"
                android:onClick="handleMatch"
                android:text="@string/text_cc"
                android:textColor="#FFFFFF"

                android:textSize="40sp" />

            <Button
                android:id="@+id/seelye_button"
                android:layout_width="268dp"
                android:layout_height="217dp"
                android:layout_marginStart="68dp"
                android:layout_marginLeft="68dp"
                android:layout_marginTop="16dp"
                android:background="@drawable/seeyle"
                android:onClick="handleMatch"
                android:text="@string/Text_seeyle"
                android:textColor="#FFFFFF"

                android:textSize="40sp" />




        </LinearLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>